# PyConPL2025Workshop

./: pyproject.toml  requirements.txt
app/: main.py
app/agents/: __init__.py  fake_agent.py
app/api/: database.py  prompting.py
app/controller/: controller.py
app/databases/: __init__.py  fake_database.py
app/interfaces/: agent.py  database.py
tests/: conftest.py
tests/controller/: test_controller.py
tests/databases/: test_fake_database.py
